--- a/frontend/searchle/styles/globals.scss
+++ b/frontend/searchle/styles/globals.scss
@@ -58,12 +58,28 @@ select {
   font: inherit;
 }
 
+// reset button appearances
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+input[type="”email”"],
+input[type="”tel”"],
+input[type="”number”"],
+.input-checkbox,
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-radius: 0;
+}
+
 // Remove all animations, transitions and smooth scroll for people that prefer not to see them 
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
@@ -80,6 +96,7 @@ select {
 html {
   color-scheme: dark;
 }
+
 body {
   color: white;
   background: black;
